test/mutation_analysis/s0006_zigzag_conversion/hafis/ablation_o3_full/mutants/31/result.txt
./test/mutation_analysis/s0006_zigzag_conversion/hafis/ablation_o3_full/mutants/31/Solution.java:27: error: unreachable statement
                while (false) {
                              ^
1 error
